--- a/auth-service/src/main/resources/application.yml
+++ b/auth-service/src/main/resources/application.yml
@@ -1,16 +1,22 @@
 server:
-  port: 8080
-  servlet:
-    context-path: /services/be/auth-service
+  port: 8280
 
 spring:
   application:
-    name: AUTH-SERVICE
-  datasource:
-    url: jdbc:mysql://localhost:3306/auth_db
-    username: auth_user
-    password: auth_pass
-    driver-class-name: com.mysql.cj.jdbc.Driver
+    name: API-GATEWAY
+    restclient:
+      user:
+        url: http://localhost:8080/services/be/user-service/
+
+      cloud:
+        gateway:
+          routes:
+            - id: user-service
+              uri: http://localhost:8080
+              predicates:
+                - Path=/services/be/user-service/**
+
+
   jpa:
     hibernate:
       ddl-auto: update
@@ -31,12 +37,10 @@ spring:
           starttls:
             enable: true
 
-
-
 doc:
   api:
     path: /doc/api
-    title: User API
+    title: auth API
     description: Documentation for the Auth API
     version: 1.0.0
 
@@ -45,5 +49,17 @@ jwt:
   signature: L3OaW5Jv7f9qT8U0pD7rYkJ9u3PxMfBcXlZAnKj2hFs=
   expiration: 3600000  # 1 hora
   refresh-expiration: 86400000  # 24 horas
+
+logging:
+  level:
+    org.springframework.web.cors: DEBUG
+    org.springframework.web.filter.CorsFilter: DEBUG
+    org.springframework.cloud.gateway: DEBUG
+    org.springframework.web.reactive.function.client: DEBUG
+    io.netty: DEBUG
+    reactor.netty: DEBUG
+    reactor.netty.channel: TRACE
+    reactor.netty.http.client: TRACE
+    reactor.netty.transport: TRACE
 
 
