--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -8,22 +8,40 @@ spring:
       user:
         url: http://localhost:8081/services/be/user-service/
 
-      cloud:
-        gateway:
-          routes:
-            - id: user-service
-              uri: http://localhost:8080
-              predicates:
-                - Path=/services/be/user-service/**
+  cloud:
+    gateway:
+      default-filters:
+        - DedupeResponseHeader=Access-Control-Allow-Credentials Access-Control-Allow-Origin, RETAIN_FIRST
+        - AddResponseHeader=Access-Control-Allow-Origin, *
+        - AddResponseHeader=Access-Control-Allow-Methods, GET, POST, PUT, DELETE, OPTIONS
+        - AddResponseHeader=Access-Control-Allow-Headers, *
 
+      routes:
+        - id: user-service
+          uri: http://192.168.1.34:8081
+          predicates:
+            - Path=/services/be/user-service/**
 
-  jpa:
-    hibernate:
-      ddl-auto: update
-    show-sql: true
-    properties:
-      hibernate:
-        dialect: org.hibernate.dialect.MySQLDialect
+        - id: offer-service
+          uri: http://192.168.1.34:8080
+          predicates:
+            - Path=/services/be/offer-service/**
+
+        - id: interview-service
+          uri: http://192.168.1.34:8083
+          predicates:
+            - Path=/services/be/interview-service/**
+
+        - id: audio-service
+          uri: http://192.168.1.34:8084
+          predicates:
+            - Path=/services/be/stream-service/**
+
+        - id: stream-ws
+          uri: ws://192.168.1.34:8084
+          predicates:
+            - Path=/services/be/stream-service/**
+
 
   mail:
     host: smtp.gmail.com
@@ -44,25 +62,26 @@ doc:
     description: Documentation for the Auth API
     version: 1.0.0
 
-  group-configs:
-    - group: user-service
-      paths-to-match: /services/be/user-service/**
-      url: http://localhost:8080/services/be/user-service/v3/api-docs
+springdoc:
+  swagger-ui:
+    enabled: true
+    path: /swagger-ui.html
+    urls:
+      - name: user-service
+        url: /services/be/user-service/v3/api-docs
+      - name: offer-service
+        url: /services/be/offer-service/v3/api-docs
+      - name: interview-service
+        url: /services/be/interview-service/v3/api-docs
+
+
+
 
 
 jwt:
   signature: L3OaW5Jv7f9qT8U0pD7rYkJ9u3PxMfBcXlZAnKj2hFs=
   expiration: 3600000  # 1 hora
   refresh-expiration: 86400000  # 24 horas
-
-role-access:
-  CLIENT:
-    - /services/be/user-service/cv/**
-    - /services/be/offer-service/**
-  ADMIN:
-    - /services/be/admin-service/**
-    - /services/be/user-service/admin/**
-
 
 logging:
   level:
