--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,12 +1,10 @@
 server:
   port: 8280
+  forward-headers-strategy: framework  # Reconoce headers como X-Forwarded-Proto en Azure
 
 spring:
   application:
     name: API-GATEWAY
-    restclient:
-      user:
-        url: http://192.168.1.34:8081/services/be/user-service/
 
   cloud:
     gateway:
@@ -18,37 +16,25 @@ spring:
 
       routes:
         - id: user-service
-          uri: http://192.168.1.34:8081
+          uri: http://20.63.88.120:8080
           predicates:
             - Path=/services/be/user-service/**
-      cloud:
-        gateway:
-          routes:
-            - id: user-service
-              uri: http://20.63.88.120:8080
-              predicates:
-                - Path=/services/be/user-service/**
-
-            - id: offer-service
-              uri: http://20.63.88.120:8080
-              predicates:
-                - Path=/services/be/offer-service/**
-
-            - id: interview-service
-              uri: http://20.63.88.120:8083
-              predicates:
-                - Path=/services/be/interview-service/**
-
-            - id: audio-service
-              uri: http://20.63.88.120:8084
-              predicates:
-                - Path=/services/be/stream-service/**
-
-            - id: stream-ws
-              uri: ws://20.63.88.120:8084
-              predicates:
-                - Path=/services/be/stream-service/**
-
+        - id: offer-service
+          uri: http://20.63.88.120:8080
+          predicates:
+            - Path=/services/be/offer-service/**
+        - id: interview-service
+          uri: http://20.63.88.120:8083
+          predicates:
+            - Path=/services/be/interview-service/**
+        - id: audio-service
+          uri: http://20.63.88.120:8084
+          predicates:
+            - Path=/services/be/stream-service/**
+        - id: stream-ws
+          uri: ws://20.63.88.120:8084
+          predicates:
+            - Path=/services/be/stream-service/**
 
   mail:
     host: smtp.gmail.com
@@ -62,13 +48,6 @@ spring:
           starttls:
             enable: true
 
-doc:
-  api:
-    path: /doc/api
-    title: auth API
-    description: Documentation for the Auth API
-    version: 1.0.0
-
 springdoc:
   swagger-ui:
     enabled: true
@@ -80,10 +59,6 @@ springdoc:
         url: /services/be/offer-service/v3/api-docs
       - name: interview-service
         url: /services/be/interview-service/v3/api-docs
-
-
-
-
 
 jwt:
   signature: L3OaW5Jv7f9qT8U0pD7rYkJ9u3PxMfBcXlZAnKj2hFs=
@@ -101,5 +76,3 @@ logging:
     reactor.netty.channel: TRACE
     reactor.netty.http.client: TRACE
     reactor.netty.transport: TRACE
-
-
