--- a/pom.xml
+++ b/pom.xml
@@ -106,8 +106,11 @@
 			<artifactId>spring-cloud-starter-gateway</artifactId>
 		</dependency>
 
-
-
+		<dependency>
+			<groupId>org.apache.maven.plugins</groupId>
+			<artifactId>maven-javadoc-plugin</artifactId>
+			<version>3.11.2</version>
+		</dependency>
 
 		<!-- Test -->
 		<dependency>
@@ -150,6 +153,15 @@
 							<version>${org.mapstruct.version}</version>
 						</path>
 					</annotationProcessorPaths>
+				</configuration>
+			</plugin>
+
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-javadoc-plugin</artifactId>
+				<version>3.11.2</version>
+				<configuration>
+					<source>17</source>
 				</configuration>
 			</plugin>
 			<plugin>
