--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -6,12 +6,13 @@ on:
   pull_request:
     branches: [ "main", "develop" ]
 
-
 jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
+
     steps:
-      - uses: actions/checkout@v4
+      - name: Checkout source code
+        uses: actions/checkout@v4
 
       - name: Set up JDK 17
         uses: actions/setup-java@v4
@@ -23,10 +24,15 @@ jobs:
       - name: Build and Package with Maven (skip tests)
         run: mvn clean package -DskipTests
 
-      - name: Deploy to Azure Web App
+      - name: Upload .jar as artifact
+        uses: actions/upload-artifact@v3
+        with:
+          name: spring-boot-app
+          path: target/*.jar
+
+      - name: Deploy Spring Boot .jar to Azure Web App
         uses: azure/webapps-deploy@v2
         with:
-          app-name: 'apiGateway
-'
+          app-name: 'apiGateway'
           publish-profile: ${{ secrets.AZURE_WEBAPP_PUBLISH_PROFILE }}
           package: './target/auth-service-0.0.1-SNAPSHOT.jar'
