--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -7,11 +7,10 @@ on:
     branches: [ "main", "develop" ]
 
 jobs:
-  build-and-deploy:
+  build:
     runs-on: ubuntu-latest
-
     steps:
-      - name: Checkout source code
+      - name: Checkout code
         uses: actions/checkout@v4
 
       - name: Set up JDK 17
@@ -21,18 +20,29 @@ jobs:
           distribution: 'temurin'
           cache: maven
 
-      - name: Build and Package with Maven (skip tests)
+      - name: Build with Maven (clean install)
+        run: mvn clean install -DskipTests
+
+  deploy:
+    needs: build
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Set up JDK 17
+        uses: actions/setup-java@v4
+        with:
+          java-version: '17'
+          distribution: 'temurin'
+          cache: maven
+
+      - name: Package Application
         run: mvn clean package -DskipTests
 
-      - name: Upload .jar as artifact
-        uses: actions/upload-artifact@v3
-        with:
-          name: spring-boot-app
-          path: target/*.jar
-
-      - name: Deploy Spring Boot .jar to Azure Web App
+      - name: Deploy to Azure Web App
         uses: azure/webapps-deploy@v2
         with:
           app-name: 'apiGateway'
           publish-profile: ${{ secrets.AZURE_WEBAPP_PUBLISH_PROFILE }}
-          package: './target/auth-service-0.0.1-SNAPSHOT.jar'
+          package: './target/YARP-0.0.1-SNAPSHOT.jar'
