--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -45,4 +45,4 @@ jobs:
         with:
           app-name: 'apiGateway'
           publish-profile: ${{ secrets.AZURE_WEBAPP_PUBLISH_PROFILE }}
-          package: './target/YARP-0.0.1-SNAPSHOT.jar'
+          package: './target/auth-service-0.0.1-SNAPSHOT.jar'
